MarcoKitTests/TestData/error/object2.marco
--before
{a

--after
0-2: Unexpected end of file
